# sensordata-demo

./: .gitignore  .nens.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: nens-meta.yml
ansible/: deploy.yml
etc/: nginx.conf
scripts/: STAObservations2Lizard.py
src/: app.py  frost.py  process.py
src/templates/: base.html  frost_overview.html  index.html
tests/: groundwaterlevel-example.json  test_process.py
