[project]
name = "sensordata-demo"
version = "0.1.0-dev"
description = "Demo for lora/sensordata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.zest-releaser]
release = false
