[build-system]
requires = ["setuptools>=69"]

[project]
name = "sensordata-demo"
version = "0.1.0-dev"
description = "Demo for lora/sensordata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-httpauth>=4.8.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.2",
    "requests>=2.32.3",
    "sentry-sdk[flask]>=2.25.1",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.zest-releaser]
release = false

[tool.pyright]
# Out-of-the-box vscode support, based on uv's defaults
venvPath = "."
venv = ".venv"
include = "src"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
